--- a/fake-index.html
+++ b/fake-index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="src/main.js"></script>
+    <script src="src/graphics.js"></script>
+    <script src="src/utilities.js"></script>
+    <script src="src/loader.js"></script>
     <script src="audviz.js"></script>
     <title>Egg Beater</title>
 </head>
