fixed slider id

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </section>
                     <!--DISTORTION SLIDER-->
                     <section class="sliders">
-                        Distortion: <input type="range" id="distortSlider" min="0" max="100" value="0" id="distortionSlider"> <span id="distortLabel">0</span>
+                        Distortion: <input type="range" id="distortSlider" min="0" max="100" value="0"> <span id="distortLabel">0</span>
                     </section>
                 </section>
             </div>
