fixed html errors

--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
                 <section class="radio">
                     <label class="section">
                         Gay: <input type="radio" name="pride" id="gay" value="gay">
-                        <span class="eggRadio" for="gay"></span>
+                        <span class="eggRadio"></span>
                     </label>
                 </section>
                 <!--LESBIAN-->
                 <section class="radio">
                     <label class="section">
                         Lesbian: <input type="radio" name="pride" id="les" value="les">
-                        <span class="eggRadio" for="les"></span>
+                        <span class="eggRadio"></span>
                     </label>
                 </section>
                 <!--BI-->
                 <section class="radio">
                     <label class="section">
                         Bisexual: <input type="radio" name="pride" id="bi" value="bi">
-                        <span class="eggRadio" for="bi"></span>
+                        <span class="eggRadio"></span>
                     </label>
 
                 </section>
@@ -121,7 +121,7 @@
                 <section class="radio">
                     <label class="section">
                         Pansexual: <input type="radio" name="pride" id="pan" value="pan">
-                        <span class="eggRadio" for="pan"></span>
+                        <span class="eggRadio"></span>
                     </label>
 
                 </section>
@@ -129,7 +129,7 @@
                 <section class="radio">
                     <label class="section">
                         Asexual: <input type="radio" name="pride" id="ace" value="ace">
-                        <span class="eggRadio" for="ace"></span>
+                        <span class="eggRadio"></span>
                     </label>
                 </section>
 
