Added source files for songs

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
                 <!-- CHOOSE AUDIO-->
                 <section>
                     <select id="trackSelect">
+                        <!--
+                        Sources for audio files, in order:
+                            https://www.youtube.com/watch?v=msSc7Mv0QHY
+                            https://www.youtube.com/watch?v=NbP8wMWsdho
+                            https://www.youtube.com/watch?v=Sk5TsrmgEj4
+                        -->
                         <option value="testAudio/chickenSong.mp3" selected>The Chicken Song</option>
                         <option value="testAudio/sicEmOnAChicken.mp3">Sic 'Em On A Chicken</option>
                         <option value="testAudio/chickenFried.mp3">Chicken Fried</option>
