--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <!--NOISE-->
                 <div class="sliderLabel">
-                    Sepia:
+                    Noise:
                     <section class="onoffswitch">
                         <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="noise">
                         <label class="onoffswitch-label" for="noise">
